# minecraft-discord-bot

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml
.sqlx/: query-251fb4470d74b86b5d04db2585c56af96c7eb99c5c955869cdb55efc2a9f98c2.json  query-44185353a647496dc1b8ae3fcce1860316213c9393808b12dee35779c0fd8d90.json  query-50cab6559eb4695088e5278fe7fd5670ba3518e77c78fa658d30bcfa59639284.json  query-6af42215995564fbcf02ecc1a039bfef767fd6d685003def96cc8ce544d84da6.json  query-76e063e1065fe1b88b2757611eda86a1dcc16f82188794dbe986d6ff4091c435.json  query-90bc0adcd21631aa1015f701caa66d9bd7d338a6c66d8101e8af0b911954a15b.json  query-f973bb22b0c06648800fee7bc492570faed2bdde44519dff9b53e2c806b9b8b5.json
migrations/: 20251125001454_initial.sql
src/: docker.rs  main.rs  server_state.rs
src/active_features/: players.rs
src/commands/: log.rs  mod.rs  ping.rs  restart.rs  snitch.rs
src/sql/: mod.rs  player_join.rs
