[package]
name = "minecraft-discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bollard = "0.19.3"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
serenity = { version = "0.12.4", features = ["rustls_backend"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
